--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Finanzverwaltung</title>
     <link rel="stylesheet" href="./main.css">
 </head>
-<body>
+<body translate="no">
     <form id="financeForm">
         <input type="text" id="businessName" placeholder="Geschäftsname" required>
         <input type="text" id="paymentType" placeholder="Zahlungsart" required>
