--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </table>
     </div>
 
-    <p>Gesamtsumme: <span id="totalSum">0.00</span></p>
+    <p class="total__sum_txt">Gesamtsumme: <span id="totalSum">0.00</span></p>
 
     <div class="kontoauszug">
         <h2>Kontoauszug:</h2>
