--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <input type="text" id="businessName" placeholder="Geschäftsname" required>
         <select id="paymentType" required>
             <option value="">Zahlungsart wählen</option>
+            <option value="adac kreditkarte">ADAC Kreditkarte</option>
             <option value="bar">Bar</option>
+            <option value="barclays visa">Barclays Visa</option>
+            <option value="deutsche bank platin mastercard">Deutsche Bank Platin Mastercard</option>
+            <option value="deutsche bank goldkarte:">Deutsche Bank Goldkarte:</option>
+            <option value="deutsche bank plus mastercard:">Deutsche Bank Plus Mastercard:</option>
+            <option value="deutsche bank kreditkarte classic">Deutsche Bank Kreditkarte Classic</option>
+            <option value="dkb visa">DKB Visa</option>
             <option value="klarna">Klarna</option>
             <option value="kreditkarte">Kreditkarte</option>
             <option value="paypal">PayPal</option>
             <option value="spende">Spende</option>
+            <option value="tf - bank">TF - Bank</option>
             <option value="überweisung">Überweisung</option>
         </select>
         <input type="number" id="amount" placeholder="Betrag" step="0.01" required>
