--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <h1>Finanzverwalter</h1>
     </div>
-    <!-- <form id="financeForm">
+    <form id="financeForm">
         <input type="text" id="businessName" placeholder="Geschäftsname" required>
         <select id="paymentType" required>
             <option value="">Zahlungsart wählen</option>
@@ -67,7 +67,7 @@
             <tbody id="accountStatementBody"></tbody>
         </table>
     </div>
-    </div> -->
+    </div>
     <script src="./app.js" defer></script>
 </body>
 
