--- a/index.html
+++ b/index.html
@@ -18,20 +18,34 @@
         <input type="text" id="businessName" placeholder="Geschäftsname" required>
         <select id="paymentType" required>
             <option value="">Zahlungsart wählen</option>
-            <option value="adac kreditkarte">ADAC Kreditkarte</option>
-            <option value="bar">Bar</option>
-            <option value="barclays visa">Barclays Visa</option>
-            <option value="deutsche bank platin mastercard">Deutsche Bank Platin Mastercard</option>
-            <option value="deutsche bank goldkarte:">Deutsche Bank Goldkarte:</option>
-            <option value="deutsche bank plus mastercard:">Deutsche Bank Plus Mastercard:</option>
-            <option value="deutsche bank kreditkarte classic">Deutsche Bank Kreditkarte Classic</option>
-            <option value="dkb visa">DKB Visa</option>
-            <option value="klarna">Klarna</option>
-            <option value="kreditkarte">Kreditkarte</option>
-            <option value="paypal">PayPal</option>
-            <option value="spende">Spende</option>
+            <option value="ADAC Kreditkarte">ADAC Kreditkarte</option>
+            <option value=" in bar">bar</option>
+            <option value="Barclays Visa">Barclays Visa</option>
+            <option value="Deutsche Bank Platin Mastercard">Deutsche Bank Platin Mastercard</option>
+            <option value="Deutsche Bank Goldkarte:">Deutsche Bank Goldkarte:</option>
+            <option value="Deutsche Bank Plus Mastercard:">Deutsche Bank Plus Mastercard:</option>
+            <option value="Deutsche Bank Kreditkarte Classic">Deutsche Bank Kreditkarte Classic</option>
+            <option value="DKB Visa">DKB Visa</option>
+            <option value="DZ Bank">DZ Bank</option>
+            <option value="Helaba">Helaba</option>
+            <option value="Hypovereinsbank">Hypovereinsbank</option>
+            <option value="KfW">KfW</option>
+            <option value="Klarna">Klarna</option>
+            <option value="Kreditkarte">Kreditkarte</option>
+            <option value="LBBW">LBBW</option>
+            <option value="Nord LB">Nord LB</option>
+            <option value="PayPal">PayPal</option>
+            <option value="Postbank">Postbank</option>
+            <option value="Raiffeisenbank">Raiffeisenbank</option>
+            <option value="Rechnung">Rechnung</option>
+            <option value="Santander">Santander</option>
+            <option value="Scheck">Scheck</option>
+            <option value="Sofortüberweisung">Sofortüberweisung</option>
+            <option value="Sparkasse">Sparkasse</option>
+            <option value="Spende">Spende</option>
             <option value="tf - bank">TF - Bank</option>
             <option value="überweisung">Überweisung</option>
+            <option value="volksbank">Volksbank</option>
         </select>
         <input type="number" id="amount" placeholder="Betrag" step="0.01" required>
         <button type="submit">Hinzufügen</button>
